fix openapi yaml server and examples
